[package]
name = "ddebug-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
petgraph = "0.6.4"
prettyplease = "0.2.16"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits", "full", "visit"] }
thiserror = "1.0.56"
